--- a/sass/main.css
+++ b/sass/main.css
@@ -367,22 +367,22 @@ summary {
 .advert-title {
   text-transform: uppercase;
   text-align: center;
-  font-weight: 400;
   font-size: 35px;
   line-height: 42px;
-  margin: 39px 0 17px;
-  padding: 0;
+  padding: 39px 0 17px;
+  margin: 0;
   font-family: "Cormorant Garamond", serif;
+  font-weight: 400;
 }
 
 .advert-description {
   text-align: center;
-  color: #747474;
   font-size: 16px;
   line-height: 22px;
   margin: 0 0 75px;
   padding: 0;
   font-family: "Open Sans", sans-serif;
+  color: #747474;
 }
 
 .advantages {
@@ -391,6 +391,7 @@ summary {
   list-style: none;
   margin: 0;
   padding: 0;
+  margin-bottom: 82px;
 }
 
 .advantages__item {
@@ -398,15 +399,28 @@ summary {
   align-items: center;
   flex-basis: 30%;
   margin: 10px;
+  padding: 7px 8px;
+}
+.advantages__item:hover {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.11);
+  border-radius: 30px;
+  background-color: rgba(217, 217, 217, 0.26);
 }
 
-.advantages__image {
+.advantages__image-wrap {
   width: 110px;
   height: 104px;
   border-radius: 50%;
-  background-color: #fbc2eb;
-  opacity: 0.3;
+  background-color: rgba(251, 194, 235, 0.35);
   margin-right: 15px;
+  position: relative;
+}
+
+.advantages__image {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .advantages__wrapper {
@@ -414,19 +428,155 @@ summary {
 }
 
 .advantages__title {
-  font-weight: 400;
   font-size: 20px;
   line-height: 27px;
-  margin: 0 0 7px;
-  padding: 0;
+  padding: 0 0 7px;
+  margin: 0;
   font-family: "Open Sans", sans-serif;
+  font-weight: 400;
 }
 
 .advantages__description {
-  color: #656464;
   font-size: 16px;
   line-height: 22px;
   margin: 0;
   padding: 0;
   font-family: "Open Sans", sans-serif;
+  color: #656464;
+}
+
+.wrapper {
+  height: 1600px;
+  background: linear-gradient(180deg, #A6C1EE 0%, #FBC2EB 100%);
+}
+
+.menu-title {
+  text-transform: uppercase;
+  text-align: center;
+  color: #FFFFFF;
+  margin-top: 228px;
+  font-size: 35px;
+  line-height: 42px;
+  padding: 228px 0 15px;
+  margin: 0;
+  font-family: "Cormorant Garamond", serif;
+  font-weight: 400;
+}
+
+.menu-description {
+  text-align: center;
+  font-size: 16px;
+  line-height: 22px;
+  margin: 0 0 75px;
+  padding: 0;
+  font-family: "Open Sans", sans-serif;
+  color: #747474;
+}
+
+.cards {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  list-style: none;
+  margin-bottom: 35px;
+}
+.cards::before {
+  content: url(../../images/arrow2.svg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #FFFFFF;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+}
+.cards::after {
+  content: url("../../images/arrow1.svg");
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #FFFFFF;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+}
+.cards__item {
+  width: 363px;
+  height: 520px;
+  background-color: #FFFFFF;
+  border-radius: 35px;
+  position: relative;
+}
+.cards__save {
+  position: absolute;
+  top: 22px;
+  right: 19px;
+}
+.cards__product {
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  margin-top: 100px;
+}
+.cards__background {
+  width: 100%;
+  height: 102px;
+  background-color: rgba(251, 194, 235, 0.35);
+}
+.cards__title {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 22px;
+  line-height: 27px;
+  padding: 24px 17px;
+  margin: 0;
+  font-family: "Cormorant Garamond", serif;
+  font-weight: 600;
+}
+.cards__description {
+  position: absolute;
+  bottom: 19px;
+  left: 17px;
+  font-weight: 600;
+  font-size: 19px;
+  line-height: 26px;
+  margin: 0;
+  padding: 0;
+  font-family: "Open Sans", sans-serif;
+  color: #000000;
+}
+.cards__button {
+  width: 105px;
+  height: 37px;
+  border: none;
+  background-color: rgba(251, 194, 235, 0.35);
+  border-radius: 50px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  position: absolute;
+  bottom: 15px;
+  right: 17px;
+  font-size: 17px;
+  line-height: 23px;
+  margin: 0;
+  padding: 0;
+  font-family: "Open Sans", sans-serif;
+  color: #000000;
+}
+
+.dots {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+}
+.dots__item:not(:last-child) {
+  margin-right: 15px;
+}
+.dots__circle {
+  width: 20px;
+  height: 20px;
+  background-color: #FFFFFF;
+  border-radius: 50%;
+}
+.dots__circle.first {
+  background-color: #FBC2EB;
 }/*# sourceMappingURL=main.css.map */
