--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 
 @import './components/header';
 @import './components/hero';
-@import './components/advert'
+@import './components/advert';
+@import './components/menu';
 
 
