--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,7 +1,17 @@
-@mixin descr ($size, $height, $secondary-font, $margin) {
+@mixin description ($size, $height, $secondary-font, $margin, $color) {
     font-size: $size;
     line-height: $height;
     margin: $margin;
     padding: 0;
     font-family: $secondary-font;
+    color: $color;
+}
+
+@mixin title ($size, $height, $secondary-font, $padding, $weight) {
+    font-size: $size;
+    line-height: $height;
+    padding: $padding;
+    margin: 0;
+    font-family: $secondary-font;
+    font-weight: $weight;
 }
