--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -1,19 +1,13 @@
 $primary-text-color: #000000; 
-//  switch with white titles, h3, some cards=primary
 $secondary-text-color: #5C5C5C;
-//  under our menu and under our gallery and macarons set and how to find us
 $tertiary-text-color: #FFFFFF;
-//  header,h1,p under h1,titles h2
 $advantages-section-text: #656464;
-//  some text under h3 in one section
-$card-color: #FBC2EB;
+$card-color: rgba(251, 194, 235, 0.35);
 $send-button-color: #9F9F9F;
 $accent-color: #D9D9D9;
-
+$description-color: #747474;
 $main-font: 'Cormorant Garamond', serif;
 $secondary-font: 'Open Sans', sans-serif;
-
 $header-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
 $linear: linear-gradient(180deg, #A6C1EE 0%, #FBC2EB 100%);
 
