--- a/sass/main.css
+++ b/sass/main.css
@@ -481,7 +481,7 @@ summary {
   margin-bottom: 35px;
 }
 .cards::before {
-  content: url(../../images/arrow2.svg);
+  content: url("/images/arrow2.svg");
   display: flex;
   justify-content: center;
   align-items: center;
@@ -491,7 +491,7 @@ summary {
   height: 60px;
 }
 .cards::after {
-  content: url("../../images/arrow1.svg");
+  content: url("/images/arrow1.svg");
   display: flex;
   justify-content: center;
   align-items: center;
