--- a/sass/main.css
+++ b/sass/main.css
@@ -324,7 +324,7 @@ summary {
   margin-right: 60px;
 }
 .nav__item:last-child::before {
-  content: url("../../images/phone.svg");
+  content: url("/images/phone.svg");
   margin-right: 5px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
