--- a/sass/main.css
+++ b/sass/main.css
@@ -292,7 +292,7 @@ summary {
   border: 1px solid #FFFFFF;
   border-radius: 50%;
   margin-right: 10px;
-  background-image: url("/images/macaron.svg");
+  background-image: url("/images/macaron.png");
   background-repeat: no-repeat;
   background-position: center;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -324,7 +324,7 @@ summary {
   margin-right: 60px;
 }
 .nav__item:last-child::before {
-  content: url("/images/phone.svg");
+  content: url("/images/phone.png");
   margin-right: 5px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
@@ -334,7 +334,7 @@ summary {
   height: 59px;
   background-color: #FFFFFF;
   border-radius: 50%;
-  background-image: url("/images/bag.svg");
+  background-image: url("/images/bag.png");
   background-repeat: no-repeat;
   background-position: center;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -481,7 +481,7 @@ summary {
   margin-bottom: 35px;
 }
 .cards::before {
-  content: url("/images/arrow2.svg");
+  content: url("/images/arrow-left.png");
   display: flex;
   justify-content: center;
   align-items: center;
@@ -491,7 +491,7 @@ summary {
   height: 60px;
 }
 .cards::after {
-  content: url("/images/arrow1.svg");
+  content: url("/images/arrow-right.png");
   display: flex;
   justify-content: center;
   align-items: center;
