--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -24,7 +24,7 @@
     margin-bottom: 35px;
 
     &::before {
-        content: url('/images/arrow-left.png');
+        content: url('../../images/arrow-left.png');
             display: flex;
             justify-content: center;
             align-items: center;
@@ -35,7 +35,7 @@
     }
 
     &::after {
-        content: url('/images/arrow-right.png');
+        content: url('../../images/arrow-right.png');
         display: flex;
         justify-content: center;
         align-items: center;
