add image changes

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -23,7 +23,7 @@
         border: 1px solid $tertiary-text-color;
         border-radius: 50%;  
         margin-right: 10px;
-        background-image: url('../../images/macaron.png');
+        background-image: url(../../images/macaron.png);
         background-repeat: no-repeat;
         background-position: center;
         box-shadow: $header-shadow;
@@ -75,7 +75,7 @@
         height: 59px;
         background-color: $tertiary-text-color;
         border-radius: 50%;
-        background-image: url('../../images/bag.png');
+        background-image: url(../../images/bag.png);
         background-repeat: no-repeat;
         background-position: center;
         box-shadow: $header-shadow;
