--- a/sass/main.css
+++ b/sass/main.css
@@ -292,7 +292,7 @@ summary {
   border: 1px solid #FFFFFF;
   border-radius: 50%;
   margin-right: 10px;
-  background-image: url("../../images/macaron.png");
+  background-image: url(../../images/macaron.png);
   background-repeat: no-repeat;
   background-position: center;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -334,7 +334,7 @@ summary {
   height: 59px;
   background-color: #FFFFFF;
   border-radius: 50%;
-  background-image: url("../../images/bag.png");
+  background-image: url(../../images/bag.png);
   background-repeat: no-repeat;
   background-position: center;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
